kubernetes-deployments/gateway-and-httproutes/comments-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: comments
spec:
  parentRefs:
  - name: prod-web
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /comments
    backendRefs:
    - name: comments-service
      port: 8080
