kubernetes-deployments/gateway-and-httproutes/post-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: post-httproute
spec:
  parentRefs:
  - name: prod-web
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/posts
    backendRefs:
    - name: post-svc
      port: 8080
