kubernetes-deployments/gateway-and-httproutes/search-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: search-httproute
spec:
  parentRefs:
  - name: prod-web
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/search
    backendRefs:
    - name: search-api-svc
      port: 9201
