kubernetes-deployments/gateway-and-httproutes/user-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: user
spec:
  parentRefs:
    - name: prod-web # Connecting this route to the prod-web gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /user
      backendRefs:
        - name: useridentityapi-service
          port: 8080
